# motus

./: README.md  install.sh  mkdocs.yaml  pyproject.toml
.agents/plugins/: marketplace.json  motus
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json  plugin.json
docs/: docs.json  introduction.mdx  style.css
docs/cloud/: sandbox.mdx
docs/concepts/: agents.mdx  memory.mdx  overview.mdx  runtime.mdx  sandbox.mdx  skills.mdx  tools.mdx  workflow.mdx
docs/contributing/: code-style.mdx  development-setup.mdx  pull-requests.mdx  testing.mdx
docs/getting-started/: configuration.mdx  installation.mdx
docs/guides/: deployment.mdx  guardrails.mdx  human-in-the-loop.mdx  mcp-integration.mdx  multi-agent.mdx  plugin.mdx  serving.mdx  tracing.mdx
docs/reference/: api-sessions.mdx  cli-serve.mdx
docs/reference/api/: messages.mdx  overview.mdx  webhooks.mdx
docs/reference/cli/: deploy.mdx  login.mdx  logout.mdx  overview.mdx  whoami.mdx
docs/reference/cli/serve/: chat.mdx  create.mdx  delete.mdx  get.mdx  health.mdx  messages.mdx  overview.mdx  send.mdx  sessions.mdx  start.mdx
examples/: agent.py
plugins/: README.md
plugins/motus/.claude-plugin/: plugin.json
plugins/motus/.codex-plugin/: plugin.json
plugins/motus/skills/motus/: SKILL.md  gemini-extension.json
src/motus/: cli.py  enable_claude_auto_update.py
src/motus/agent/: base_agent.py  react_agent.py
src/motus/google_adk/: _motus_tracing.py
src/motus/memory/: model_limits.py
src/motus/models/: anthropic_client.py  base.py  gemini_client.py  openai_client.py  pricing.py
src/motus/plugins/motus/.claude-plugin/: plugin.json
src/motus/plugins/motus/.codex-plugin/: plugin.json
src/motus/plugins/motus/.cursor-plugin/: plugin.json
src/motus/plugins/motus/skills/motus/: gemini-extension.json
src/motus/runtime/tracing/: config.py  trace_to_otel.py
src/motus/runtime/tracing/templates/: trace_viewer.css  trace_viewer.html  trace_viewer.js
src/motus/serve/: server.py  worker.py
src/motus/tools/: __init__.py
src/motus/tools/providers/: __init__.py
src/motus/tools/providers/cloud/: __init__.py  sandbox.py  tool_provider.py
src/motus/tools/providers/docker/: tool_provider.py
tests/unit/models/: test_base64_image.py
