[project]
name = "lithosai-motus"
version = "0.1.0"
description = "Motus Agent Framework"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Xinhao Cheng", email = "xinhao@lithosai.com" },
    {name = "Patrick Coppock", email = "patrick@lithosai.com"},
    {name = "Jianan Ji", email = "jianan@lithosai.com"},
    {name = "Zhihao Jia", email = "zhihao@lithosai.com"},
    {name = "Eliot Solomon", email = "eliot@lithosai.com"},
    {name = "Zhihao Zhang", email = "zhihaoz@lithosai.com"},
    {name = "Yu Zhou", email = "yu@lithosai.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "colorlog>=6.8.0",
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "openai>=2.30",
    "pydantic>=2.12.5",
    "rich>=13.0.0",
    "uvicorn>=0.40.0",
    "jsonref>=1.1.0",
    "tiktoken>=0.12.0",
    "backports-zstd>=1.3.0; python_version < '3.14'",
    "pathspec>=1.0.4",
    "pyyaml>=6.0",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://www.lithosai.com"
Repository = "https://github.com/lithos-ai/motus.git"

[project.scripts]
motus = "motus.cli:main"

[project.optional-dependencies]
openai-agents = [
    "openai-agents>=0.0.10",
]
google-adk = [
    "google-adk>=1.27.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
motus = ["runtime/tracing/templates/*", "plugins/**/*"]

[tool.uv.sources]
motus-deep-research = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
    "examples/deep_research",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "motus-deep-research",
    "pip>=25.3",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-vcr>=1.0.2",
    "vcrpy>=8.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Fast unit tests (no external dependencies)",
    "integration: Integration tests using cassettes",
    "slow: Slow tests (real API calls or heavy operations)",
]

[tool.ruff.lint]
# E: pycodestyle errors, F: Pyflakes, I: Isort, W: pycodestyle warnings
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["motus"]

[tool.ruff.lint.per-file-ignores]
"**/*.py" = ["E501", "E402"]
